--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <a href="Tag 1/About.html">Tag1</a>
-    <a href="Tag 2/fonts.html">Tag2</a>
+    <a href="Tag 2/css-rules.html">Tag2</a>
     <a href="Tag 4/index.html">Tag4</a>
 </body>
 </html>
