Entwurf verfeinert, korrekte Bilder rein, Farben angepasst

--- a/Tag 4/index.html
+++ b/Tag 4/index.html
@@ -17,22 +17,21 @@
 
   <h3 class="b"> Infinity –  Jaymes Young</h3>
 
-  <div class="ex2"><h2>infinity</h2> <img src="images/Beispiel-Bild.jpg" width="435px" alt="Beispiel-Bild"> <p style="font-weight: bold;"> I love you for infinity (Oh-oh-oh)</p>
-    <p>I love you for <span style="font-weight: bold;">infinity</span>(Oh-oh-oh)</p> 
+  <div class="ex2"><h2 >Infinity</h2> <width="435px" alt="Beispiel-Bild"> <p style="font-weight: bold;"> I love you for infinity (Oh-oh-oh)</p>
+    <p style="font-size: 90px;">I love you for <span style="font-weight: bold;">infinity</span></p> 
     Cause I love you for infinity (Oh-oh-oh)
     I love you for infinity (Oh-oh-oh)</div>
 
     <h3 class="a"> Infinity –  Jaymes Young</h3>
 
-    <div class="ex2"><h2>infinity</h2> <img src="images/Beispiel-Bild.jpg" width="435px" alt="Beispiel-Bild"> <p style="font-weight: bold;"> I love you for infinity (Oh-oh-oh)</p>
+    <div class="ex3"><h2>infinity</h2> <img src="images/herz.png"
+      width="435px" alt="Beispiel-Bild"> <p style="font-weight: bold;"> I love you for infinity (Oh-oh-oh)</p>
       <p>I love you for <span style="font-weight: bold;">infinity</span>(Oh-oh-oh)</p> 
       Cause I love you for infinity (Oh-oh-oh)
       I love you for infinity (Oh-oh-oh)</div>
 
+      <a href="https://www.figma.com/file/uP4w5546HhMHAsMUrvWftO/Kickweb_Infinity_MaraKupper?node-id=0%3A1">Zu den Übungen mit den Rastersystemen und Fibonacci</a>
   
-
-  
-<h3>Display</h3>
 </body>
 </html>
 
