--- a/Tag 5/index.html
+++ b/Tag 5/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
+<link href="style.css" rel="stylesheet">
 <style>
 .container {
-  position: relative;
+  position: absolute;
 }
 
 .bottomleft {
@@ -25,8 +26,8 @@ img {
 <p>Mit der Positon spielen ist lustig:</p>
 
 <div class="container">
-  <img src=images/"LT_Raster-Poster_22.jpg" alt="Cinque Terre" width="1000" height="300">
-  <div class="bottomleft">Bottom Left</div>
+  <img src=images/LT_Raster-Poster_22.jpg alt="LT_Raster-Poster_22" width="200px">
+  <div class="bottomleft">Fibonacci-Entwurf</div>
 </div>
 
 </body>
