--- a/Version-1/1-umsetzung-lyrics.html
+++ b/Version-1/1-umsetzung-lyrics.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,12 @@
     <title>Infinity – Mara Kupper</title>
     <link href="style-lyrics.css" rel="stylesheet">
 
+    <div>
+
+    </div>
+
 </head>
+
 <body style="background-color: rgb(172, 169, 169);font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;text-align: center;">
     <h1 style="background-color: white;">Infinity</h1>
     <h2>Chorus</h2>
@@ -25,10 +31,11 @@
     <p>I'll be your sacrifice (Oh-oh-oh)</p>
 
 
-   
+
 
 
     <a href="https://www.figma.com/file/uP4w5546HhMHAsMUrvWftO/Kickweb_Infinity_MaraKupper?node-id=0%3A1">Zu meinem Moodboard auf Figma</a>
-    
+
 </body>
+
 </html>
