--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="Tag 2/css-rules.html">Tag2</a>
     <a href="Tag 4/index.html">Tag4</a>
     <a href="Tag 5/index.html">Tag5</a>
-    <a href="Sprint 1/index.html">Tag5</a>
+    <a href="Sprint 1/index.html">Sprint 1</a>
 </body>
 
 </html>
