--- a/Sprint-Entwicklung_3/Sprint-Entwicklung-3_index.html
+++ b/Sprint-Entwicklung_3/Sprint-Entwicklung-3_index.html
@@ -12,9 +12,13 @@
 <body>
     <!---Sonstiges-->
     <div class="container info">
-        <p>Mara Kupper | Kickweb 2022 | James Young Infinity
+        <div class="item-legende"></div>
+        <p class="Roboto">Mara Kupper | Kickweb 2022 | James Young Infinity
 
         </p>
+    </div>
+    <div>
+        <p class="Roboto">PROCESS<br>ABOUT<br>PLAY SONG</p>
     </div>
 
     <!---page1-->
