--- a/Sprint/Sprint 2/Sprint-2-index.html
+++ b/Sprint/Sprint 2/Sprint-2-index.html
@@ -11,15 +11,30 @@
 
 <body>
     <!---Sonstiges-->
-    <div class="container info">
-        <div class="item-legende"></div>
-        <p class="Roboto">Mara Kupper | Kickweb 2022 | James Young Infinity
 
-        </p>
-    </div>
-    <div>
-        <p class="Roboto">PROCESS<br>ABOUT<br>PLAY SONG</p>
-    </div>
+    <!-- aside -->
+    <aside>
+        <div class="container info">
+            <div class="item-legende">
+                <p class="Legende">Mara Kupper | Kickweb 2022 | James Young Infinity
+            </div>
+
+        </div>
+        <div class="navigation">
+            <p class="roboto">PROCESS</p>
+            <p class="roboto">ABOUT</p>
+            <p class="roboto">Play Song</p>
+        </div>
+
+    </aside>
+
+
+    <main>
+
+
+    </main>
+
+
 
     <!---page1-->
     <div class="container main">
@@ -101,15 +116,153 @@
     </div>
 
 
-
-
-    <br>
-    <br>
-
     <!---page2-->
-    <div class="container main">
-        <h4>love</h4>
+
+    <h1 class="roboto textcolor">Love</h1>
     </div>
+
+
+    <!---page 3-->
+    <div class="container main ">
+        <div class="vertical">
+            <table summary="">
+                <tr>
+                    <td style="font-size: 18px;">(Oh-Oh-Oh)</td>
+                </tr>
+                <tr>
+                    <td style="font-size: 36px;">(Oh-Oh-Oh)</td>
+                </tr>
+                <tr>
+                    <td style="font-size: 54px;">(Oh-Oh-Oh)</td>
+                </tr>
+                <tr>
+                    <td style="font-size: 90px;">(Oh-Oh-Oh)</td>
+                </tr>
+            </table>
+        </div>
+
+
+        <div class="horizontal">
+            <table summary="">
+                <tr>
+                    <td style="font-size: 5px;">(Oh-Oh-Oh)</td>
+                </tr>
+                <tr>
+                    <td style="font-size: 10px;">(Oh-Oh-Oh)</td>
+                </tr>
+                <tr>
+                    <td style="font-size: 15px;">(Oh-Oh-Oh)</td>
+                </tr>
+                <tr>
+                    <td style="font-size: 25px;">(Oh-Oh-Oh)</td>
+                </tr>
+                <tr>
+                    <td style="font-size: 40px;">(Oh-Oh-Oh)</td>
+                </tr>
+
+            </table>
+
+
+        </div>
+    </div>
+
+
+    <!---Page 4-->
+    <div class="container main">
+        <h1 class="roboto roboto thin">Infinity</h1>
+    </div>
+
+    <!---Page 5-->
+    <div class="container main">
+        <img src="images/Astronaut-white.png" width="40%">
+
+    </div>
+
+    <!---page6-->
+    <div class="container main">
+
+        <div class="oh-container">
+
+            <div class="container row">
+                <div class="item">
+                    <p>oh</p>
+                </div>
+                <div class="item">
+                    <p>oh</p>
+                </div>
+                <div class="item">
+                    <p>oh</p>
+                </div>
+                <div class="item">
+                    <p>oh</p>
+                </div>
+
+
+
+            </div>
+            <div class="container row">
+                <div class="item">
+                    <p>oh</p>
+                </div>
+                <div class="item">
+                    <p>oh</p>
+                </div>
+                <div class="item">
+                    <p>oh</p>
+                </div>
+                <div class="item">
+                    <p>oh</p>
+                </div>
+
+
+
+            </div>
+            <div class="container row">
+                <div class="item">
+                    <p>oh</p>
+                </div>
+                <div class="item">
+                    <p>oh</p>
+                </div>
+                <div class="item">
+                    <p>oh</p>
+                </div>
+                <div class="item">
+                    <p>oh</p>
+                </div>
+
+
+
+            </div>
+            <div class="container row">
+                <div class="item">
+                    <p>oh</p>
+                </div>
+                <div class="item">
+                    <p>oh</p>
+                </div>
+                <div class="item">
+                    <p>oh</p>
+                </div>
+                <div class="item">
+                    <p>oh</p>
+                </div>
+
+
+
+
+            </div>
+
+        </div>
+    </div>
+    </div>
+
+
+
+
+
+
+
 
 
 </body>
