--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <p>xxx</p>
                 <p>xxx</p>
             </div>
-            <div class="box box-white"><a href="Tag 2/css-rules.html">Sprint 2</a>
+            <div class="box box-white"><a href="Sprint/Sprint 2/index.html">Sprint 2</a>
                 <p>xxx</p>
                 <p>xxx</p>
             </div>
