--- a/Sprint/Sprint 2/index.html
+++ b/Sprint/Sprint 2/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Sprint-2-style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Sprint 1 Entwicklung-3</title>
 </head>
 
