--- a/Prozess/Tag 2/css-rules.html
+++ b/Prozess/Tag 2/css-rules.html
@@ -8,12 +8,12 @@
     <title>Document</title>
     <link href="style.css" rel="stylesheet" />
     <style>
-        .specialclass {
-            color: red;
+        p {
+            color: cornflowerblue;
         }
         
-        p {
-            color: cornflowerblue !important;
+        .specialclass {
+            color: red;
         }
         
         #wrapper {
@@ -26,7 +26,7 @@
 <body>
     <h1>CSS Syntax </h1>
     <p>Hallo</p>
-    <p class="specialclass">Dies sollte rot sein,Dies sollte rot sein,Dies sollte rot sein,Dies sollte rot sein,Dies sollte rot sein</p>
+    <p class="specialclass">Dies sollte rot sein!</p>
 
     <div id="wrapper">
         Layoutbox
