--- a/index.html
+++ b/index.html
@@ -14,32 +14,47 @@
     <div>
         <h1>PROCESS</h1>
         <div class="container">
-            <div class="box box-green"><a href="Tag 1/About.html">Tag 1</a>
-                <p>xxx</p>
-                <p>xxx</p>
+            <div class="box box-green"><a href="Prozess/Tag 1/About.html">Tag 1 / 2</a>
+                <p>My first HTML-Page.</p>
+
             </div>
-            <div class="box box-green"><a href="Tag 2/css-rules.html">Tag 2</a>
-                <p>xxx</p>
-                <p>xxx</p>
+            <div class="box box-green"><a href="Prozess/Tag 4/index.html">Tag 3 / 4</a>
+                <p>Lets talk about images.</p>
+
             </div>
 
-            <div class="box box-green"><a href="Tag 4/index.html">Tag 3</a>
-                <p>xxx</p>
-                <p>xxx</p>
+            <div class="box box-green"><a href="Prozess/Tag 5/index.html">Tag 5 / 6</a>
+                <p>Everything about grids.</p>
+            </div>ml
+            <div class="box box-green"><a href="Prozess/Tag 7/index.html">Tag 7 / 8</a>
+                <p>Here comes the animation!</p>
+
             </div>
-            <div class="box box-green"><a href="Tag 4/index.html">Tag 4</a>
-                <p>xxx</p>
-                <p>xxx</p>
+            <div class="box box-green"><a href="Tag 4/index.html">Tag 9 / 10</a>
+                <p>All about Flex-Boxes.</p>
+            </div>
+            <div class="box box-green"><a href="Tag 4/index.html">Tag 11 / 12</a>
+                <p>My Astronout learns to fly in a Backgrund-Propertie!</p>
+
+
+            </div>
+            <div class="box box-green"><a href="Tag 4/index.html">Tag 13 / 14</a>
+                <p>Let's rule (Responsive)!</p>
             </div>
         </div>
-        <div class="container">
-            <div class="box box-white"><a href="Sprint/Sprint 1/index.html">Sprint 1</a>
-                <p>xxx</p>
-                <p>xxx</p>
+
+
+        <br>
+
+        <br>
+        <br>
+
+        <div class="container white">
+            <div class="box white"><a class=white href="Sprint/Sprint 1/index.html">Sprint 1</a>
             </div>
-            <div class="box box-white"><a href="Sprint/Sprint 2/index.html">Sprint 2</a>
-                <p>xxx</p>
-                <p>xxx</p>
+            <div class="box white"><a class=white href="Sprint/Sprint 2/index.html">Sprint 2</a>
+            </div>
+            <div class="box white"><a class=white href="Sprint/Sprint 2/index.html">Sprint 3</a>
             </div>
 
         </div>
