--- a/Sprint/Sprint 3/index.html
+++ b/Sprint/Sprint 3/index.html
@@ -55,7 +55,6 @@
 
     </aside>
 
-
     <!---page1-->
     <div class="container main">
 
@@ -135,10 +134,9 @@
     </div>
     </div>
 
-
     <!---page2-->
-
-    <h1 class="roboto textcolor">Love</h1>
+    <div class="container main">
+        <h1 class="roboto textcolor">Love</h1>
     </div>
 
     <!---page 3-->
@@ -157,16 +155,13 @@
         </div>
     </div>
 
-
-    <!---Page 4-->
-    <div class="container main">
-        <h1 class="roboto roboto thin">Infinity</h1>
+    <!---Astronut-->
+    <div class="astronaut">
+        <img src="images/Astronaut-white.png" width="40%">
     </div>
 
-    <!---Page 5-->
-    <img src="images/Astronaut-white.png" width="40%">
 
-    <!---page5-->
+    <!---page 4-->
     <div class="container main">
 
         <div class="oh-container3">
@@ -243,6 +238,13 @@
 
         </div>
     </div>
+    </div>
+
+    <!---Page 5-->
+    <div class="container main">
+        <div class="container white">
+            <h1 class="roboto roboto thin">Infinity</h1>
+        </div>
     </div>
 
 
