--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <div class="box box-green"><a href="Prozess/Tag 5/index.html">Tag 5 / 6</a>
                 <p>Everything about grids.</p>
-            </div>ml
+            </div>
             <div class="box box-green"><a href="Prozess/Tag 7/index.html">Tag 7 / 8</a>
                 <p>Here comes the animation!</p>
 
@@ -54,7 +54,7 @@
             </div>
             <div class="box white"><a class=white href="Sprint/Sprint 2/index.html">Sprint 2</a>
             </div>
-            <div class="box white"><a class=white href="Sprint/Sprint 2/index.html">Sprint 3</a>
+            <div class="box white"><a class=white href="Sprint/Sprint 3/index.html">Sprint 3</a>
             </div>
 
         </div>
