--- a/index.html
+++ b/index.html
@@ -5,61 +5,305 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <title>Kickweb – Infinity – Mara Kupper</title>
+    <style>
+
+    </style>
+
 </head>
 
 <body>
+    <!---Sonstiges-->
 
-    <div>
-        <h1>PROCESS</h1>
-        <div class="container">
-            <div class="box box-green"><a href="Prozess/Tag 1/About.html">Tag 1 / 2</a>
-                <p>My first HTML-Page.</p>
-
-            </div>
-            <div class="box box-green"><a href="Prozess/Tag 4/index.html">Tag 3 / 4</a>
-                <p>Lets talk about images.</p>
-
+    <!-- aside -->
+    <aside>
+        <div class="container info">
+            <div class="item-legende">
+                <p class="Legende">Mara Kupper | Kickweb 2022 | James Young Infinity
             </div>
 
-            <div class="box box-green"><a href="Prozess/Tag 5/index.html">Tag 5 / 6</a>
-                <p>Everything about grids.</p>
-            </div>
-            <div class="box box-green"><a href="Prozess/Tag 7/index.html">Tag 7 / 8</a>
-                <p>Here comes the animation!</p>
-
-            </div>
-            <div class="box box-green"><a href="Tag 4/index.html">Tag 9 / 10</a>
-                <p>All about Flex-Boxes.</p>
-            </div>
-            <div class="box box-green"><a href="Tag 4/index.html">Tag 11 / 12</a>
-                <p>My Astronout learns to fly in a Backgrund-Propertie!</p>
-
-
-            </div>
-            <div class="box box-green"><a href="Tag 4/index.html">Tag 13 / 14</a>
-                <p>Let's rule (Responsive)!</p>
-            </div>
         </div>
+        <div class="navigation">
+
+            <div class="roboto"><a href="Prozess/index.html">PROCESS</a> </div>
+            <div class="roboto btn" onclick="playAudio()">Play Song</div>
+            <audio src="sounds/Jaymes Young - Infinity (Lyrics).wav"></audio>
+            <script src="js/play.js"></script>
+
+    </aside>
+
+    <!---page1-->
+    <div class="container main">
+
+        <div class="oh-container">
+
+            <div class="container row">
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="size2-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="size2-oh">oh</p>
+                </div>
 
 
-        <br>
 
-        <br>
-        <br>
+            </div>
+            <div class="container row">
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="size2-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
 
+
+
+            </div>
+            <div class="container row">
+                <div class="item">
+                    <p class="size2-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+
+
+
+            </div>
+            <div class="container row">
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="size2-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="size2-oh">oh</p>
+                </div>
+
+
+
+
+            </div>
+
+        </div>
+    </div>
+    </div>
+
+    <!---page2-->
+    <div class="container main">
+        <h1 class="roboto textcolor">Love</h1>
+    </div>
+
+    <!---page 3-->
+    <div class="container main ">
+        <div class="flex-row">
+            <div class="item oh font-36"><span>(Oh-Oh-Oh)</span></div>
+            <div class="item oh font-40"><span>(Oh-Oh-Oh)</span></div>
+            <div class="item oh font-54"><span>(Oh-Oh-Oh)</span></div>
+            <div class="item oh font-90"><span>(Oh-Oh-Oh)</span></div>
+        </div>
+        <div class="flex-col">
+            <div class="item oh font-36"><span>(Oh-Oh-Oh)</span></div>
+            <div class="item oh font-18"><span>(Oh-Oh-Oh)</span></div>
+            <div class="item oh font-12"><span>(Oh-Oh-Oh)</span></div>
+            <div class="item oh font-9"><span>(Oh-Oh-Oh)</span></div>
+        </div>
+    </div>
+
+    <!---Astronut-->
+    <div class="astronaut">
+        <img src="images/Astronaut-white.png" width="40%">
+    </div>
+
+
+    <!---page 4-->
+    <div class="container main">
+
+        <div class="oh-container3">
+
+            <div class="container row">
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+
+
+
+            </div>
+            <div class="container row">
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+
+
+
+            </div>
+            <div class="container row">
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+
+
+
+            </div>
+            <div class="container row">
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+
+
+
+
+            </div>
+
+        </div>
+    </div>
+    </div>
+
+    <!---Page 5-->
+    <div class="container main">
         <div class="container white">
-            <div class="box white"><a class=white href="Sprint/Sprint 1/index.html">Sprint 1</a>
+            <h1 class="roboto roboto thin">Infinity</h1>
+        </div>
+    </div>
+
+
+    <!---page6-->
+    <div class="container main">
+
+        <div class="oh-container2">
+
+            <div class="container row">
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+
+
+
             </div>
-            <div class="box white"><a class=white href="Sprint/Sprint 2/index.html">Sprint 2</a>
+            <div class="container row">
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+
+
+
             </div>
-            <div class="box white"><a class=white href="Sprint/Sprint 3/index.html">Sprint 3</a>
+            <div class="container row">
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+
+
+
+            </div>
+            <div class="container row">
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+                <div class="item">
+                    <p class="main-oh">oh</p>
+                </div>
+
+
+
+
             </div>
 
         </div>
-
-
+    </div>
+    </div>
 
 </body>
 
