--- a/Prozess/Tag 7/index.html
+++ b/Prozess/Tag 7/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
     <title>Example -- Absolute Position and Transform</title>
@@ -23,7 +22,7 @@
             top: 10px;
             left: 10px;
             font-size: 4rem;
-            font-family: 'Montserrat', sans-serif;
+            font-family: 'Palette Mosaic';
             transition: all 1s;
         }
         
